MSE expression edit

--- a/Applied Predictive Modeling/Chapter05_Regression model Performance.ipynb
+++ b/Applied Predictive Modeling/Chapter05_Regression model Performance.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "### 5.2 분산-편향성 트레이드 오프\n",
     "* MSE의 기댓값 E \n",
-    "    * E[MSE] = $\\sigma^2$ + $(모델 편향성)^2$ + 모델 분산\n",
+    "    * E[MSE] = $\\sigma^2$ + (모델편향성)^2 + 모델 분산\n",
     "        * 여기서 첫항($\\sigma^2$)은 보통 \"기약 오차\"라고 하는데, 이는 모델링에서 제거할 수 없다.\n",
     "        * 두 번째 항은 모델 편향의 제곱값이다. 이는 모델의 함수 형식이 실제 예측 변수와 결과 간의 관계를 얼마나 제대로 표현했는지를 반영한다.\n",
     "        * 마지막 항은 모델 분산이다.\n",
