--- a/Statistics/Chapter07_estimation.ipynb
+++ b/Statistics/Chapter07_estimation.ipynb
@@ -34,6 +34,10 @@
    "metadata": {},
    "source": [
     "## 7.1 점추정과 구간추정\n",
+    "\n",
+    "추정 : 연구의 궁극적 관심의 대상은 모집단이고, 모집단의 특성을 나타내주는 것이 모수라고 할 때, 그 모수의 참값이 무엇인지 자료를 통해 합리적인 추측을 하는 것이 '추정' <br>\n",
+    "모수의 참값이 어떤 특정한 값인지 아닌지를 자료를 통해 결정하는 것이 '검정'\n",
+    "\n",
     "* 점 추정\n",
     "    * 하나의 값으로 모수를 추정하는 것\n",
     "    * 추정값의 정확성에 대한 정보를 제공하지 않는다. <br>\n",
@@ -44,11 +48,6 @@
     "    * 모수가 어떤 값을 가질 것인지에 대한 정보와 함께 신뢰도와 오차의 한계를 통하여 추정의 불확실성에 대한 정보도 제공\n",
     "    (점 추정과의 차이) <br>\n",
     "    ex) 우리나라 고등학생 평균키는 167cm 에서 173cm 사이다.\n",
-    "    * 추정값의 정확성에 대한 정보를 제공하지 않는다.\n",
-    "* 구간 추정 \n",
-    "    * 적절한 구간을 설정하여 모수를 추정하는 것\n",
-    "    * 모수가 어떤 값을 가질 것인지에 대한 정보와 함께 신뢰도와 오차의 한계를 통하여 추정의 불확실성에 대한 정보도 제공\n",
-    "    (점 추정과의 차이)\n",
     "\n",
     "------------------------------------------------------------------------------------------------------------------\n",
     "### 7.1.1 점추정\n",
@@ -62,7 +61,6 @@
     "----->  A : 추정량은 통계량이고 통계량은 확률변수이므로 표본이 달라지면 값이 달라지기 때문<br>\n",
     "\n",
     "#### **[ 편향과 분산 ]**\n",
-    "#### [ 편향과 분산 ]\n",
     "* 분산\n",
     "추정값들이 가까이 있으면 추정량의 분산이 작은 것이고, <br>\n",
     "넓게 퍼져 있으면 분산이 큰 것이다. <br>\n",
@@ -79,7 +77,7 @@
     "    평균제곱오차(mean square error) = 분산 + $편향^2$ <br>\n",
     "###    MSE = $\\frac{1}{n}\\sum_{i=1}^n (\\hat Y_i - Y_i)^2 $ <br>\n",
     "\n",
-    "* 특별히, 편향이 0인 추정량은 비편향추정량이라고 한다.\n",
+    "* 특별히, 편향이 0인 추정량은 비편향추정량이라고 한다. (즉, 치우치지 않음을 의미)\n",
     "    * 추정량의 평균이 실제 모수값과 일치할 때 추정량을 비편향추정량이라고 한다.\n",
     "\n",
     "#### < 예제 7.1 >\n",
@@ -89,22 +87,15 @@
     "| --- | --- |---|---|---|---|---|---|---|---|\n",
     "| P($\\bar X$)|$\\frac{1}{25}$|$\\frac{2}{25}$| $\\frac{3}{25}$ |$\\frac{4}{25}$|$\\frac{5}{25}$ |$\\frac{4}{25}$|$\\frac{3}{25}$|$\\frac{2}{25}$|$\\frac{1}{25}$| \n",
     "\n",
-    "* 중간으로 갈수록 확률이 커지고 양 끝으로 갈 수록 확률이 작아짐 \n",
+    "* 특징 : 중간으로 갈수록 확률이 커지고 양 끝으로 갈 수록 확률이 작아짐 \n",
     "    * 정규분포와 흡사\n",
     "\n",
     "#### < 예제 7.2 >\n",
     "결론 : 표본분산의 '평균'은 모분산과 같게 되어 표본분산은 모분산의 비편향추정량이 된다. <br>\n",
     "* 분산은 모분산 $\\sigma^2$ 의 1/n배인 $\\sigma^2$/n 과 같다.\n",
     "    * 여기서 n은 표본의 개수 \n",
-    "    평균제곱오차(mean square error) = 분산 + $편향^2$\n",
     "\n",
     "* 특별히, 편향이 0인 추정량은 비편향추정량이라고 한다.\n",
-    "\n",
-    "#### 예제 7.1\n",
-    "결론 : 표본평균의 평균은 모평균과 같게되어 표본평균은 모평균의 비편향추정량이 된다.\n",
-    "\n",
-    "#### 예제 7.2\n",
-    "결론 : 표본분산의 평균은 모분산과 같게 되어 표본분산은 모분산의 비편향추정량이 된다.\n",
     "\n",
     "------------------------------------------------------------------------------------------------------------------\n",
     "### 7.1.2 구간추정\n",
@@ -131,12 +122,6 @@
     "    * 즉, 표준오차가 작다면 표본평균들로 모평균을 추정한다는 사실을 의심할 필요가 적어짐.\n",
     "    * 표본에 대해서만 논하지, '모표준오차'와 같은 개념은 잘못된것.\n",
     "\n",
-    "즉, 표본의 크기가 커질수록 표준편차가 작아져, 표본평균의 분포가 $\\mu$ 주변으로 집중된다는 것이다.<br>\n",
-    "\n",
-    "그러므로 표본의 크기가 충분히 크면 관측된 표본평균이 모평균에 매우 가까이 있다고 생각 할 수 있다.<br>\n",
-    "\n",
-    "여기서 표준편차  $\\frac{\\sigma}{\\sqrt n}$  는 추정량인 표본평균 $\\bar X_n$ 의 흩어진 정도에 대한 측도로서 **표준오차** 라고도 한다.<br>\n",
-    "* 표본평균의 표준오차 => 표준오차\n",
     "\n",
     "#### [ 표본평균의 분포 ]\n",
     "* 모집단이 정규분포를 따르면, 표본평균의 분포는 $N(\\mu, \\frac{\\sigma^2}{n})$\n",
@@ -152,7 +137,10 @@
     "* 동일한 크기의 표본을 매우 많이 뽑아 각 표본에 대해 $\\bar X_n \\pm z_{\\frac{\\alpha}{2}} \\frac{\\sigma}{\\sqrt n}$ 의 구간들을 구하면 그 중에서 95% 정도가 모평균을 포함한다는 의미\n",
     "* 이 구간을 모평균에 대한 신뢰구간이라고 하며 이것이 모평균의 구간추정이 된다.\n",
     "\n",
-    "신뢰도 = 신뢰도 수준 (+/-) 표본오차\n",
+    "신뢰도 = 신뢰도 수준 (+/-) 표본오차 <br>\n",
+    "\n",
+    "표본오차 : $Z_{\\alpha / 2} \\frac{\\sigma}{\\sqrt n}$ <br>\n",
+    "표준오차 : $\\frac{\\sigma}{\\sqrt n}$\n",
     "\n",
     "#### [ 신뢰구간의 정확한 의미 ]\n",
     "-----> Q. 다음 중 맞는 의미\n",
@@ -163,7 +151,7 @@
     "\n",
     "------------------------------------------------------------------------------------------------------------------\n",
     "\n",
-    "### 7.2 모평균의 신뢰구간\n",
+    "## 7.2 모평균의 신뢰구간\n",
     "모분산이 알려져 있는 경우 <br>\n",
     "### $\\bar X_n \\pm z_{\\frac{\\alpha}{2}} \\frac{\\sigma}{\\sqrt n}$\n",
     "\n",
@@ -183,7 +171,7 @@
     "\n",
     "------------------------------------------------------------------------------------------------------------------\n",
     "\n",
-    "### 7.3 모비율의 신뢰구간\n",
+    "## 7.3 모비율의 신뢰구간\n",
     "* 모비율 : 모집단이 어떤 특성을 가지는 비율\n",
     "* 표본비율 : 모집단에서 임의로 추출한 표본에서 어떤 특징을 가지는 대상의 비율\n",
     "\n",
@@ -221,9 +209,9 @@
     "=> 통계학에서 '표본오차'는 일정한 신뢰수준을 확보하기 위한 Z값 또는 t값에 표준오차를 곱한다.\n",
     "\n",
     "------------------------------------------------------------------------------------------------------------------\n",
-    "$\\hat{p} \\pm z_\\frac{\\alpha}{2} \\sqrt \\frac{\\hat{p}(1-\\hat{p})}{n}$ 로 구하게 된다.\n",
     "\n",
-    "### 7.4 표본크기의 결정\n",
+    "\n",
+    "## 7.4 표본크기의 결정\n",
     "===> 요약 : 표본크기를 결정하는 이유는, 적절한 신뢰구간과 신뢰수준을 얻기 위함. \n",
     "\n",
     "신뢰구간을 구할 때, $\\bar X_n$ , $\\sigma$ , $n$ 이 모두 고정된 상태에서 신뢰수준을 높이면, 즉 $\\alpha$를 줄이면 $z_\\frac{\\alpha}{2}$ 의 값이 커져서 구간이 넓어진다. <br>\n",
@@ -252,7 +240,7 @@
     "* $p(1-p)$ = 1/4로 놓는 것은 p = 1/2 에서 최댓값을 가지며, 최댓값을 쓰게 되면 실제로 필요한 표본의 크기보다 더 큰 표본을 쓰게 되어 보수적인 신뢰구간을 얻기 때문이다.\n",
     "\n",
     "------------------------------------------------------------------------------------------------------------------\n",
-    "### 7.5 모평균의 차에 대한 신뢰구간\n",
+    "## 7.5 모평균의 차에 대한 신뢰구간\n",
     "참고자료 : http://blog.naver.com/PostView.nhn?blogId=lchry&logNo=220509297420 \n",
     "\n",
     "두 평균의 차이에 대한 추정이나 검정에 있어서 표본평균의 차이뿐만 아니라, 표본 내의 산포 또한 고려해야 함. <br>\n",
@@ -290,7 +278,7 @@
     "예를들어 한 사람의 다이어트 프로그램 시작 전 측정결과와 끝난 후 측정결과, 두 개의 관측값이 짝지어질 경우. 이때의 신뢰구간은 아래와 같다.<br>\n",
     "### $\\bar Y \\pm t_{\\frac{\\alpha}{2}} (n-1) \\frac{S_Y}{\\sqrt n}$\n",
     "------------------------------------------------------------------------------------------------------------------\n",
-    "### 7.6 모비율의 차에 대한 신뢰구간\n",
+    "## 7.6 모비율의 차에 대한 신뢰구간\n",
     "\n",
     "=> 일반적으로 모비율의 차에 대한 정규근사에 있어서는, 일표본의 경우보다 작은 표본크기가 요구된다.\n",
     "\n",
@@ -368,7 +356,30 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 7.7 모분산에 대한 신뢰구간\n",
+    "모분산이 중요하게 작용하는 예\n",
+    "* 제조업 현장에서 생산되는 제품의 품질이 중량에 의해 좌우된다고 할 때, 중량의 모평균 외에도 분포의 흐트러진 정도를 측정하는 모분산이 품질관리에 중요함. \n",
+    "\n",
+    "모평균 $\\mu$가 알려진 경우에는 $\\sum_{i=1}^n (X_i - \\mu)^2 / \\sigma^2$ 이 자유도가 n인 카이제곱분포를 따른다는 점에 근거함. <br>\n",
+    "확률변량 $\\frac{(n-1)S^2}{\\sigma^2}$ =$\\sum_{i=1}^n (X_i - \\bar X_n)^2 / \\sigma^2$  는 자유도가 n-1인 카이제곱분포를 따른다. <br>\n",
+    "* (참고) 카이제곱은 분산의 제곱값에 대한 분포.\n",
+    "\n",
+    "1) 모평균 $\\mu$가 알려진 경우 신뢰구간 <br>\n",
+    "### $P$ = $[\\frac{\\sum_{i=1}^n (X_i - \\mu)^2}{\\chi^2_\\frac{\\alpha}{2}(n)} ,\\frac{\\sum_{i=1}^n (X_i - \\mu)^2}{\\chi^2_{1-\\frac{\\alpha}{2}}(n)}]$\n",
+    "\n",
+    "2) 모평균 $\\mu$가 알려지지 않은 경우 신뢰구간 <br>\n",
+    "### $P$ = $[\\frac{\\sum_{i=1}^n (X_i - \\bar X_n)^2}{\\chi^2_\\frac{\\alpha}{2}(n)} ,\\frac{\\sum_{i=1}^n (X_i - \\bar X_n)^2}{\\chi^2_{1-\\frac{\\alpha}{2}}(n)}]$\n",
+    "\n",
+    "-----------------------------------------------------------------\n",
+    "## 7.8 모분산의 비에 대한 신뢰구간\n",
+    "\n",
+    "* 모평균 $\\mu_X$ 와 $\\mu_Y$를 아는 경우\n",
+    "### $[ (\\frac{(n-1)S^2_X / n}{(m-1)S^2_Y / m}) F_{1-\\alpha/2}(m,n)  ,  (\\frac{(n-1)S^2_X / n}{(m-1)S^2_Y / m}) F_{\\alpha/2}(m,n) ]$\n",
+    "\n",
+    "* 모평균 $\\mu_X$ 와 $\\mu_Y$를 모르는 경우\n",
+    "### $[ (\\frac{S^2_X}{S^2_Y}) F_{1-\\alpha/2}(m-1,n-1)  ,  (\\frac{S^2_X}{S^2_Y}) F_{\\alpha/2}(m-1,n-1) ]$\n"
+   ]
   },
   {
    "cell_type": "code",
