--- a/Statistics/Chapter08_Test.ipynb
+++ b/Statistics/Chapter08_Test.ipynb
@@ -36,6 +36,8 @@
     "이 값이 아주 작다면 귀무가설을 기각하고 대립가설을 뒷받침하는 증거가 있다고 결론을 내릴 수 있다.\n",
     "\n",
     "### 8.1.3 유의확률(P-value)\n",
+    "* p-value 정의 : 귀무가설하에서 검정통계량의 관측값이 귀무가설을 기각하는 방향으로 나타나는 확률\n",
+    "\n",
     "귀무가설이 사실이라는 가정하에서, 검정통계량이 관측값과 같거나 혹은 이보다 멀리 떨어졌다는 것은 귀무가설에 대한 반증이 더 강한, 그래서 대립가설을 더 잘 뒷받침해줄 수 있는 관측값을 의미한다. <br>\n",
     "따라서 유의확률이 작을수록 귀무가설에 대해 더 강한 반증이라고 할 수 있다. <br>\n",
     "\n",
