add compare chart

--- a/Statistics/Chapter12_non-parametric-statistics.ipynb
+++ b/Statistics/Chapter12_non-parametric-statistics.ipynb
@@ -22,6 +22,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### < 정리 >\n",
+    "\n",
+    "| | 모수적 방법 | 비모수적 방법 |\n",
+    "|--------|--------|--------|\n",
+    "|독립적인 두 표본| T-검정 |윌콕슨 순위합 검정|\n",
+    "|대응되는 두 표본| 대응표본 T검정 | 윌콕슨 부호순위 검정|\n",
+    "|독립적인 셋 이상의 표본| 분산분석 (ANOVA) | 크루스칼-왈리스 검정 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Wilcoxon 순위합 검정\n",
     "2개의 처리 1과 2를 비교 연구하기 위하여$n = n_1 + n_2$ 개의 실험대상을 표본의 크기가 각각 $n_1$ 과 $n_2$인 2개의 집단으로 임의로 나눈 다음, <br>\n",
     "처리 A를 $n_1$개의 표본에 시행하고, 처리 B를 $n_2$ 개의 표본에 시행하여 다음과 같은 관측값을 얻었다고 하자. <br>\n",
