--- a/Data-Preprocessing/004_join.ipynb
+++ b/Data-Preprocessing/004_join.ipynb
@@ -2159,29 +2159,371 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q2.  과거 n건의 합곗값\n"
+    "### Q2.  과거 n건의 합곗값\n",
+    "두 건 이전부터 자신을 포함한 세 건의 합계 계산.\n",
+    "\n",
+    "> #### python skill\n",
+    "* rolling( ) 함수\n",
+    "    * rolling함수는 데이터를 window로 나누는 함수\n",
+    "    * window 매개변수로 자신을 포함하여 몇 건을 대상으로 할지 설정\n",
+    "    * min_periods 매개변수를 설정하여 설정한 값 이상의 건수를 만족했을 때만 계산을 실행하며, 설정한 건수에 미치지 못할 경우에는 NAN이 된다.\n",
+    "    * center를 True로 하면, 자신의 데이터 행이 가운데 오도록 window를 선택하고, <br>\n",
+    "    center를 설정하지 않으면 자신의 데이터 행을 포함하여 설정한 건수가 되도록 아래의 데이터 행을 더한다. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reserve_id</th>\n",
+       "      <th>hotel_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>reserve_datetime</th>\n",
+       "      <th>checkin_date</th>\n",
+       "      <th>checkin_time</th>\n",
+       "      <th>checkout_date</th>\n",
+       "      <th>people_num</th>\n",
+       "      <th>total_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>r1</td>\n",
+       "      <td>h_75</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2016-03-06 13:09:42</td>\n",
+       "      <td>2016-03-26</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>2016-03-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>r2</td>\n",
+       "      <td>h_219</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2016-07-16 23:39:55</td>\n",
+       "      <td>2016-07-20</td>\n",
+       "      <td>11:30:00</td>\n",
+       "      <td>2016-07-21</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>r3</td>\n",
+       "      <td>h_179</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2016-09-24 10:03:17</td>\n",
+       "      <td>2016-10-19</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>2016-10-22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>33600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>r4</td>\n",
+       "      <td>h_214</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-03-08 03:20:10</td>\n",
+       "      <td>2017-03-29</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>2017-03-30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>194400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>r5</td>\n",
+       "      <td>h_16</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-09-05 19:50:37</td>\n",
+       "      <td>2017-09-22</td>\n",
+       "      <td>10:30:00</td>\n",
+       "      <td>2017-09-23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>68100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  reserve_id hotel_id customer_id     reserve_datetime checkin_date  \\\n",
+       "0         r1     h_75         c_1  2016-03-06 13:09:42   2016-03-26   \n",
+       "1         r2    h_219         c_1  2016-07-16 23:39:55   2016-07-20   \n",
+       "2         r3    h_179         c_1  2016-09-24 10:03:17   2016-10-19   \n",
+       "3         r4    h_214         c_1  2017-03-08 03:20:10   2017-03-29   \n",
+       "4         r5     h_16         c_1  2017-09-05 19:50:37   2017-09-22   \n",
+       "\n",
+       "  checkin_time checkout_date  people_num  total_price  \n",
+       "0     10:00:00    2016-03-29           4        97200  \n",
+       "1     11:30:00    2016-07-21           2        20600  \n",
+       "2     09:00:00    2016-10-22           2        33600  \n",
+       "3     11:00:00    2017-03-30           4       194400  \n",
+       "4     10:30:00    2017-09-23           3        68100  "
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# customer_id별로 reserve_datetime으로 데이터 정렬\n",
+    "result=reserve_tb.groupby('customer_id').apply(lambda x: x.sort_values(by='reserve_datetime', ascending=True)).reset_index(drop=True)\n",
+    "result.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reserve_id</th>\n",
+       "      <th>hotel_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>reserve_datetime</th>\n",
+       "      <th>checkin_date</th>\n",
+       "      <th>checkin_time</th>\n",
+       "      <th>checkout_date</th>\n",
+       "      <th>people_num</th>\n",
+       "      <th>total_price</th>\n",
+       "      <th>price_sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>r1</td>\n",
+       "      <td>h_75</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2016-03-06 13:09:42</td>\n",
+       "      <td>2016-03-26</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>2016-03-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97200</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>r2</td>\n",
+       "      <td>h_219</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2016-07-16 23:39:55</td>\n",
+       "      <td>2016-07-20</td>\n",
+       "      <td>11:30:00</td>\n",
+       "      <td>2016-07-21</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20600</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>r3</td>\n",
+       "      <td>h_179</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2016-09-24 10:03:17</td>\n",
+       "      <td>2016-10-19</td>\n",
+       "      <td>09:00:00</td>\n",
+       "      <td>2016-10-22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>33600</td>\n",
+       "      <td>151400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>r4</td>\n",
+       "      <td>h_214</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-03-08 03:20:10</td>\n",
+       "      <td>2017-03-29</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>2017-03-30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>194400</td>\n",
+       "      <td>248600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>r5</td>\n",
+       "      <td>h_16</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-09-05 19:50:37</td>\n",
+       "      <td>2017-09-22</td>\n",
+       "      <td>10:30:00</td>\n",
+       "      <td>2017-09-23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>68100</td>\n",
+       "      <td>296100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>r6</td>\n",
+       "      <td>h_241</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-11-27 18:47:05</td>\n",
+       "      <td>2017-12-04</td>\n",
+       "      <td>12:00:00</td>\n",
+       "      <td>2017-12-06</td>\n",
+       "      <td>3</td>\n",
+       "      <td>36000</td>\n",
+       "      <td>298500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>r7</td>\n",
+       "      <td>h_256</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2017-12-29 10:38:36</td>\n",
+       "      <td>2018-01-25</td>\n",
+       "      <td>10:30:00</td>\n",
+       "      <td>2018-01-28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>103500</td>\n",
+       "      <td>207600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>r8</td>\n",
+       "      <td>h_241</td>\n",
+       "      <td>c_1</td>\n",
+       "      <td>2018-05-26 08:42:51</td>\n",
+       "      <td>2018-06-08</td>\n",
+       "      <td>10:00:00</td>\n",
+       "      <td>2018-06-09</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6000</td>\n",
+       "      <td>145500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>r59</td>\n",
+       "      <td>h_245</td>\n",
+       "      <td>c_10</td>\n",
+       "      <td>2016-06-20 11:10:52</td>\n",
+       "      <td>2016-07-08</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>2016-07-10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>110400</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>r60</td>\n",
+       "      <td>h_102</td>\n",
+       "      <td>c_10</td>\n",
+       "      <td>2016-10-23 01:56:42</td>\n",
+       "      <td>2016-11-01</td>\n",
+       "      <td>11:00:00</td>\n",
+       "      <td>2016-11-03</td>\n",
+       "      <td>3</td>\n",
+       "      <td>36000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  reserve_id hotel_id customer_id     reserve_datetime checkin_date  \\\n",
+       "0         r1     h_75         c_1  2016-03-06 13:09:42   2016-03-26   \n",
+       "1         r2    h_219         c_1  2016-07-16 23:39:55   2016-07-20   \n",
+       "2         r3    h_179         c_1  2016-09-24 10:03:17   2016-10-19   \n",
+       "3         r4    h_214         c_1  2017-03-08 03:20:10   2017-03-29   \n",
+       "4         r5     h_16         c_1  2017-09-05 19:50:37   2017-09-22   \n",
+       "5         r6    h_241         c_1  2017-11-27 18:47:05   2017-12-04   \n",
+       "6         r7    h_256         c_1  2017-12-29 10:38:36   2018-01-25   \n",
+       "7         r8    h_241         c_1  2018-05-26 08:42:51   2018-06-08   \n",
+       "8        r59    h_245        c_10  2016-06-20 11:10:52   2016-07-08   \n",
+       "9        r60    h_102        c_10  2016-10-23 01:56:42   2016-11-01   \n",
+       "\n",
+       "  checkin_time checkout_date  people_num  total_price  price_sum  \n",
+       "0     10:00:00    2016-03-29           4        97200        NaN  \n",
+       "1     11:30:00    2016-07-21           2        20600        NaN  \n",
+       "2     09:00:00    2016-10-22           2        33600   151400.0  \n",
+       "3     11:00:00    2017-03-30           4       194400   248600.0  \n",
+       "4     10:30:00    2017-09-23           3        68100   296100.0  \n",
+       "5     12:00:00    2017-12-06           3        36000   298500.0  \n",
+       "6     10:30:00    2018-01-28           1       103500   207600.0  \n",
+       "7     10:00:00    2018-06-09           1         6000   145500.0  \n",
+       "8     11:00:00    2016-07-10           4       110400        NaN  \n",
+       "9     11:00:00    2016-11-03           3        36000        NaN  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 새로운 열로 price_sum을 추가\n",
+    "result['price_sum']=pd.Series(result.loc[:,[\"customer_id\",\"total_price\"]]\n",
+    "                              \n",
+    "        # customer_id별로 total_price의 window 3건의 합곗값을 계산\n",
+    "          .groupby('customer_id')\n",
+    "          .rolling(center=False, window=3, min_periods=3).sum()\n",
+    "                              \n",
+    "        # group화를 해제하면서 total_price의 열을 구한다.\n",
+    "         .reset_index(drop=True)\n",
+    "         .loc[:,'total_price'])\n",
+    "result.head(10)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Q3. 과거 n건의 평균값\n"
+   ]
   },
   {
    "cell_type": "code",
